--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </div>
 
     <!-- الرسالة بعد الفيديو -->
-    <div id="scaryMessage" class="scary-message">سنسير إلى غزة مشيت لتحرير</div>
+    <div id="scaryMessage" class="scary-message"></div>
 
     <script>
         function startEffect() {
